--- a/config/routes/security.yaml
+++ b/config/routes/security.yaml
@@ -1,3 +1,9 @@
 _security_logout:
     resource: security.route_loader.logout
     type: service
+app_login:
+    path: /login
+    controller: App\Controller\LoginController::login
+
+app_logout:
+    path: /logout
